// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BrickHumanizeTime should work 1`] = `
<span>
  7/19/2019ib19-5amt5ti265:FOR7AMT_011ORT_19AM2019
</span>
`;

exports[`BrickHumanizeTime should work, isCostTime 1`] = `
<span>
  18 libs-datetime:DARS 2 libs-datetime:HOURS
</span>
`;

exports[`BrickHumanizeTime should work, link props 1`] = `
<BrickLink
  label="January 19, 1970 am10:18"
  url="/a/b/c"
/>
`;
